--- a/app/src/main/res/layout/item_horizontal_anime.xml
+++ b/app/src/main/res/layout/item_horizontal_anime.xml
@@ -18,7 +18,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="190dp"
             app:cardCornerRadius="20dp">
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -39,6 +39,7 @@
                 android:textColor="@color/white"
                 tools:text="Episodes:5"
                 android:padding="10dp"
+                android:visibility="gone"
                 android:shadowRadius="20"
                 android:shadowColor="@color/black"
                 app:gone="@{model.attributes.episodeCount != null}"/>
@@ -58,7 +59,7 @@
             android:text="@{model.attributes.titles.en != null ? model.attributes.titles.en : model.attributes.titles.enJp }"
             android:textAppearance="@style/Text.H4"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text ="Cowboy beebob"
+            tools:text ="Cowboy beebob dasdasdas a"
             app:layout_constraintTop_toBottomOf="@id/image" />
 
 
