--- a/app/src/main/res/layout/item_vertical_grid_anime.xml
+++ b/app/src/main/res/layout/item_vertical_grid_anime.xml
@@ -27,20 +27,20 @@
                 android:layout_height="210dp"
                 android:alpha="0.9"
                 android:src="@drawable/ic_test_image_for_recycler_horizontal"
-                app:setHorizontalAnimeImage="@{model.attributes.posterImage.original}" />
+                app:setVerticalAnimeImage="@{model.attributes.posterImage.original}" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center"
-                android:textAppearance="@style/Text.H6.White.Bold"
-                android:text="@{@string/text_episodes(model.attributes.episodeCount)}"
-                android:textColor="@color/white"
-                tools:text="Episodes:5"
                 android:padding="10dp"
-                android:shadowRadius="20"
                 android:shadowColor="@color/black"
-                app:gone="@{model.attributes.episodeCount != null}"/>
+                android:shadowRadius="20"
+                android:text="@{@string/text_episodes(model.attributes.episodeCount)}"
+                android:textAppearance="@style/Text.H6.White.Bold"
+                android:textColor="@color/white"
+                app:gone="@{model.attributes.episodeCount != null}"
+                tools:text="Episodes:5" />
         </androidx.cardview.widget.CardView>
 
         <com.google.android.material.textview.MaterialTextView
@@ -57,8 +57,8 @@
             android:text="@{model.attributes.titles.en != null ? model.attributes.titles.en : model.attributes.titles.enJp }"
             android:textAppearance="@style/Text.H4"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text ="Cowboy beebob"
-            app:layout_constraintTop_toBottomOf="@id/image" />
+            app:layout_constraintTop_toBottomOf="@id/image"
+            tools:text="Cowboy beebob" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
