add data mapping for Anime request, add new fun to BaseRepository

--- a/app/src/main/res/layout/item_vertical_grid_anime.xml
+++ b/app/src/main/res/layout/item_vertical_grid_anime.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="model"
-            type="com.denisbovsunivskyi.animetier.data.models.anime.tranding.AnimeDto" />
+            type="com.denisbovsunivskyi.animetier.domain.models.anime.AnimeModel" />
 
 
     </data>
