--- a/app/src/main/res/layout-land/item_vertical_grid_anime.xml
+++ b/app/src/main/res/layout-land/item_vertical_grid_anime.xml
@@ -13,23 +13,23 @@
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="140dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="190dp"
+            android:layout_gravity="center_horizontal"
             app:cardCornerRadius="20dp">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/image"
-                android:layout_width="140dp"
+                android:layout_width="match_parent"
                 android:layout_height="190dp"
                 android:alpha="0.9"
-                android:scaleType="centerCrop"
                 android:src="@drawable/ic_test_image_for_recycler_horizontal"
-                app:setHorizontalAnimeImage="@{model.attributes.posterImage.original}" />
+                app:setLandscapeAnimeCoverImage="@{model}" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
