--- a/app/src/main/res/layout/item_horizontal_anime.xml
+++ b/app/src/main/res/layout/item_horizontal_anime.xml
@@ -7,12 +7,13 @@
 
         <variable
             name="model"
-            type="com.denisbovsunivskyi.animetier.domain.models.anime.AnimeModel" />
+            type="com.denisbovsunivskyi.animetier.presentation.model.anime.AnimeListUi" />
 
 
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/horizontal_list_item"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -29,7 +30,7 @@
                 android:alpha="0.9"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_test_image_for_recycler_horizontal"
-                app:setHorizontalAnimeImage="@{model.attributes.posterImage.original}" />
+                app:setHorizontalAnimeImage="@{model.posterImage.original}" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
@@ -38,11 +39,11 @@
                 android:padding="10dp"
                 android:shadowColor="@color/black"
                 android:shadowRadius="20"
-                android:text="@{@string/text_episodes(model.attributes.episodeCount)}"
+                android:text="@{@string/text_episodes(model.episodesCount)}"
                 android:textAppearance="@style/Text.H6.White.Bold"
                 android:textColor="@color/white"
                 android:visibility="gone"
-                app:gone="@{model.attributes.episodeCount != null}"
+                app:gone="@{model.episodesCount != null}"
                 tools:text="Episodes:5" />
         </androidx.cardview.widget.CardView>
 
@@ -57,7 +58,7 @@
             android:marqueeRepeatLimit="marquee_forever"
             android:maxLines="2"
             android:scrollHorizontally="true"
-            android:text="@{model.attributes.titles.en != null ? model.attributes.titles.en : model.attributes.titles.enJp }"
+            android:text="@{model.titles.en != null ? model.titles.en : model.titles.enJp }"
             android:textAppearance="@style/Text.H4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/image"
