--- a/app/src/main/res/layout/item_vertical_list_main_recycler.xml
+++ b/app/src/main/res/layout/item_vertical_list_main_recycler.xml
@@ -21,7 +21,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/vertical_rc"
+            android:id="@+id/vertical_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
