--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -53,7 +53,7 @@
     </fragment>
     <fragment
         android:id="@+id/homeListFragment"
-        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.HomeList"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.HomeFragment"
         android:label="fragment_home_list"
         tools:layout="@layout/fragment_home" >
     </fragment>
