--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -72,7 +72,7 @@
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.denisbovsunivskyi.animetier.presentation.ui.SearchFragment"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
     <fragment
