--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,6 +65,23 @@
         <item name="errorTextColor">@color/black</item>
         <item name="errorIconTint">@color/black</item>
     </style>
+
+    <style name="SearchInputLayout" parent="Widget.Material3.TextInputLayout.OutlinedBox">
+        <item name="colorPrimary">@color/grey_dark</item>
+        <item name="colorOnSurfaceVariant">@color/grey_dark</item>
+        <item name="colorOutline">@color/grey</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColorHint">@color/grey_dark</item>
+        <item name="startIconTint">@color/black</item>
+        <item name="hintEnabled">false</item>
+        <item name="android:fontFamily">@font/ubuntu_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:focusable">true</item>
+        <item name="errorTextColor">@color/black</item>
+        <item name="errorIconTint">@color/black</item>
+    </style>
     <style name="TextInputLayoutMultiline" parent="Widget.Material3.TextInputLayout.OutlinedBox">
         <item name="colorPrimary">@color/grey</item>
         <item name="colorOnSurface">@color/grey</item>
